--- a/HAB1.html
+++ b/HAB1.html
@@ -37,7 +37,7 @@
   }
 
   .info-box li {
-    float: center;
+    float: left;
     list-style-type: none;
     width: 150px;
   }
@@ -60,7 +60,7 @@
 
   .info-box li a.active {
     background-color: #b60000;
-    color: blak;
+    color: black;
   }
 
   /* styling info-box panels */
@@ -73,7 +73,7 @@
 
   .info-box div {
     background-color: #b60000;
-    color: blak;
+    color: black;
     position: absolute;
     padding: 10px 20px;
     height: 2000px;
