--- a/HAB1.html
+++ b/HAB1.html
@@ -28,7 +28,7 @@
 
   /* styling info-box tabs */
 
-  .info-box ul {
+   .info-box ul {
     border: 1px solid #b60000;
     overflow: hidden;
     height: 50px;
@@ -47,7 +47,7 @@
     text-decoration: none;
     width: 100%;
     line-height: 50px;
-    background: black;
+    background: white;
     color: #b60000;
     text-align: center;
     font-weight: bold;
@@ -55,8 +55,14 @@
 
   .info-box li a:focus, .info-box li a:hover {
     background-color: #b60000;
-    color: black;
+    color: white;
   }
+
+  .info-box li a.active {
+    background-color: #b60000;
+    color: white;
+  }
+
 
   .info-box li a.active {
     background-color: #b60000;
