--- a/HAB1.html
+++ b/HAB1.html
@@ -23,7 +23,7 @@
   .info-box {
     width: 80%;
     height: 2000px;
-    margin: 20px auto 10;
+    margin: 10px 10px 10px 10px;
   }
 
   /* styling info-box tabs */
@@ -47,7 +47,7 @@
     text-decoration: none;
     width: 100%;
     line-height: 50px;
-    background: white;
+    background: #ebe8e8;
     color: #b60000;
     text-align: center;
     font-weight: bold;
