--- a/HAB1.html
+++ b/HAB1.html
@@ -21,9 +21,9 @@
   /* info-box setup */
 
   .info-box {
-    width: 80%;
-    height: 4000px;
-    margin: 10px 10px 10px 10px;
+    width: 85%;
+    height: 3000px;
+    margin: 10px auto 0;
   }
 
   /* styling info-box tabs */
@@ -39,7 +39,7 @@
   nav li {
     float: left;
     list-style-type: none;
-    width: 330px;
+    width: 350px;
   }
 
  nav a {
@@ -65,7 +65,7 @@
 
 
   .info-box li a.active {
-    background-color: #b60000;
+    background-color: white;
     color: black;
   }
 
@@ -74,7 +74,7 @@
   .info-box .panels {
     clear: both;
     position: relative;
-    height: 500px;
+    height: 3000px;
   }
 
   .info-box div {
@@ -82,7 +82,7 @@
     color: black;
     position: absolute;
     padding: 10px 20px;
-    height: 2000px;
+    height: 3000px;
     top: 0;
     left: 0;
   }
@@ -96,7 +96,9 @@
   </style>
 </head>
 <body>
-
+<header>
+      <h1>中国近海有害藻华</h1>
+    </header>
 <section class="info-box">
   <nav>
   <ul>
