--- a/HAB1.html
+++ b/HAB1.html
@@ -21,7 +21,7 @@
   /* info-box setup */
 
   .info-box {
-    width: 85%;
+    width: 90%;
     height: 3000px;
     margin: 10px auto 0;
   }
@@ -29,7 +29,6 @@
   /* styling info-box tabs */
 
    nav ul {
-    border: 1px solid #b60000;
     overflow: hidden;
     height: 50px;
     margin: 0;
@@ -48,19 +47,19 @@
     width: 100%;
     line-height: 50px;
     background: #ebe8e8;
-    color: #b60000;
+    color: black
     text-align: center;
     font-weight: bold;
   }
 
   .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
-    color: white;
+    color: black;
   }
 
   .info-box li a.active {
-    background-color: #b60000;
-    color: white;
+    background-color: #ebe8e8;
+    color: black;
   }
 
 
@@ -78,7 +77,7 @@
   }
 
   .info-box div {
-    background-color: #b60000;
+    background-color: white;
     color: black;
     position: absolute;
     padding: 10px 20px;
