--- a/HAB1.html
+++ b/HAB1.html
@@ -74,6 +74,7 @@
     clear: both;
     position: relative;
     height: 3000px;
+     background-color: white;
   }
 
   .info-box div {
@@ -96,7 +97,7 @@
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华</h1>
+      <h1>中国近海有害藻华2</h1>
     </header>
 <section class="info-box">
   <nav>
