--- a/HAB1.html
+++ b/HAB1.html
@@ -29,6 +29,7 @@
   /* styling info-box tabs */
 
    nav ul {
+    border: 1px solid #b60000;
     overflow: hidden;
     height: 50px;
     margin: 0;
@@ -97,7 +98,7 @@
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华2</h1>
+      <h1>中国近海有害藻华</h1>
     </header>
 <section class="info-box">
   <nav>
