--- a/HAB1.html
+++ b/HAB1.html
@@ -39,7 +39,8 @@
   nav li {
     float: left;
     list-style-type: none;
-    width: 150px;
+    width: 22.5%;
+    text-align: center;
   }
 
  nav a {
