--- a/HAB1.html
+++ b/HAB1.html
@@ -39,15 +39,13 @@
   nav li {
     float: left;
     list-style-type: none;
-    width: 22.5%;
+    width: 380px;
     text-align: center;
   }
 
  nav a {
     display: inline-block;
     text-decoration: none;
-    width: 100%;
-    line-height: 50px;
     background: #ebe8e8;
     color: black
     text-align: center;
@@ -99,7 +97,7 @@
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华</h1>
+      <h1>中国近海有害藻华ha</h1>
     </header>
 <section class="info-box">
   <nav>
