--- a/HAB1.html
+++ b/HAB1.html
@@ -30,10 +30,11 @@
 
    nav ul {
     border: 1px solid #b60000;
+    background: #ebe8e8;
     overflow: hidden;
     height: 50px;
     margin: 0;
-    padding: 0;
+    padding: 1%;
   }
 
   nav li {
