--- a/HAB1.html
+++ b/HAB1.html
@@ -27,10 +27,11 @@
   }
 
   /* styling info-box tabs */
-
+    nav{
+       background: #ebe8e8;
+    }
    nav ul {
     border: 1px solid #b60000;
-    background: #ebe8e8;
     overflow: hidden;
     height: 50px;
     margin: 0;
@@ -38,10 +39,9 @@
   }
 
   nav li {
-    float: left;
-    list-style-type: none;
-    width: 380px;
-    text-align: center;
+    display: inline;
+  text-align: center;
+  flex: 1;
   }
 
  nav a {
@@ -98,7 +98,7 @@
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华ha</h1>
+      <h1>中国近海有害藻华</h1>
     </header>
 <section class="info-box">
   <nav>
