--- a/HAB1.html
+++ b/HAB1.html
@@ -45,11 +45,12 @@
   }
 
  nav a {
-    display: inline-block;
-    text-decoration: none;
-    background: #ebe8e8;
-    color: black
-    text-align: center;
+   display: inline-block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  transition-duration: 200ms;
     font-weight: bold;
   }
 
