--- a/HAB1.html
+++ b/HAB1.html
@@ -29,6 +29,8 @@
   /* styling info-box tabs */
     nav{
        background: #ebe8e8;
+       display: flex;
+  margin-bottom: 10px;
     }
    nav ul {
     border: 1px solid #b60000;
@@ -99,7 +101,7 @@
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华</h1>
+      <h1>中国近海有害藻华ha</h1>
     </header>
 <section class="info-box">
   <nav>
