--- a/HAB1.html
+++ b/HAB1.html
@@ -28,16 +28,16 @@
 
   /* styling info-box tabs */
     nav{
-       background: #ebe8e8;
-       display: flex;
+      height: 50px;
+  background-color: #66ccff;
+  display: flex;
   margin-bottom: 10px;
     }
    nav ul {
-    border: 1px solid #b60000;
-    overflow: hidden;
-    height: 50px;
-    margin: 0;
-    padding: 1%;
+     padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
   }
 
   nav li {
@@ -55,6 +55,19 @@
   transition-duration: 200ms;
     font-weight: bold;
   }
+    nav form {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 2em;
+}
+
+nav a:hover {
+  color: white;
+  text-shadow: 0 0 10px wheat;
+  transition-duration: 200ms;
+}
 
   .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
