--- a/HAB1.html
+++ b/HAB1.html
@@ -29,9 +29,10 @@
   /* styling info-box tabs */
     nav{
       height: 50px;
-  background-color: #66ccff;
+  background-color: #ebe8e8;
   display: flex;
   margin-bottom: 10px;
+        padding: 1%;
     }
    nav ul {
      padding: 0;
@@ -48,7 +49,7 @@
 
  nav a {
    display: inline-block;
-  font-size: 2rem;
+  font-size: 16px;
   text-transform: uppercase;
   text-decoration: none;
   color: black;
@@ -68,17 +69,6 @@ nav a:hover {
   text-shadow: 0 0 10px wheat;
   transition-duration: 200ms;
 }
-
-  .info-box li a:focus, .info-box li a:hover {
-    background-color: #ebe8e8;
-    color: black;
-  }
-
-  .info-box li a.active {
-    background-color: #ebe8e8;
-    color: black;
-  }
-
 
   .info-box li a.active {
     background-color: #ebe8e8;
