--- a/HAB1.html
+++ b/HAB1.html
@@ -100,7 +100,7 @@ nav a:hover {
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华ha</h1>
+      <h1>中国近海有害藻华</h1>
     </header>
 <section class="info-box">
   <nav>
