--- a/HAB1.html
+++ b/HAB1.html
@@ -32,7 +32,7 @@
   background-color: #ebe8e8;
   display: flex;
   margin-bottom: 10px;
-        padding: 1%;
+        padding: 10px;
     }
    nav ul {
      padding: 0;
