--- a/HAB1.html
+++ b/HAB1.html
@@ -31,7 +31,7 @@
       height: 50px;
   background-color: #ebe8e8;
   display: flex;
-        padding: 10px;
+        padding: 0.5%;
     }
    nav ul {
      padding: 0;
@@ -99,7 +99,7 @@ nav a:hover {
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华</h1>
+      <h1>中国近海有害藻华ha</h1>
     </header>
 <section class="info-box">
   <nav>
