--- a/HAB1.html
+++ b/HAB1.html
@@ -31,7 +31,6 @@
       height: 50px;
   background-color: #ebe8e8;
   display: flex;
-        padding: 0.3%;
     }
    nav ul {
      padding: 0;
@@ -51,7 +50,7 @@
   font-size: 20px;
   text-transform: uppercase;
   text-decoration: none;
-  color: black;
+  color: #528B8B;
   transition-duration: 200ms;
     font-weight: bold;
   }
@@ -64,7 +63,7 @@
 }
 
 nav a:hover {
-  color: white;
+  color: black;
   text-shadow: 0 0 10px wheat;
   transition-duration: 200ms;
 }
