--- a/HAB1.html
+++ b/HAB1.html
@@ -50,7 +50,7 @@
   font-size: 20px;
   text-transform: uppercase;
   text-decoration: none;
-  color: #528B8B;
+  color: #4682B4;
   transition-duration: 200ms;
     font-weight: bold;
   }
@@ -68,6 +68,15 @@ nav a:hover {
   transition-duration: 200ms;
 }
 
+ .info-box li a:focus, .info-box li a:hover {
+    background-color: #ebe8e8;
+    color: white;
+  }
+
+  .info-box li a.active {
+    background-color: #ebe8e8;
+    color: white;
+  }
 
   /* styling info-box panels */
 
@@ -98,7 +107,7 @@ nav a:hover {
 </head>
 <body>
 <header>
-      <h1>中国近海有害藻华ha</h1>
+      <h1>中国近海有害藻华</h1>
     </header>
 <section class="info-box">
   <nav>
