--- a/HAB1.html
+++ b/HAB1.html
@@ -70,12 +70,12 @@ nav a:hover {
 
  .info-box li a:focus, .info-box li a:hover {
     background-color: #ebe8e8;
-    color: white;
+    color: black;
   }
 
   .info-box li a.active {
     background-color: #ebe8e8;
-    color: white;
+    color: black;
   }
 
   /* styling info-box panels */
