--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>HABs in China</title>
   </head> 
  <body>
-  <header>
-      <h1>中国近海有害藻华</h1>
-    </header>
        <main>  
 	 <section class="info-box">	
+   <header>
+      <h1>中国近海有害藻华1</h1>
+    </header>
     <nav>
 	    <ul>
           <li> <a class=class="active" href="#">首页</a></li>
