--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <main>  
 	 <section class="info-box">	
    <header>
-      <h1>中国近海有害藻华1</h1>
+      <h1>中国近海有害藻华</h1>
     </header>
     <nav>
 	    <ul>
