--- a/HAB1.html
+++ b/HAB1.html
@@ -101,6 +101,65 @@ nav a:hover {
     z-index: 1;
   }
 
+    header {
+  height: 80px;
+}
+p,li {
+   font-size: 16px;
+  line-height: 2;
+}
+ article {
+  background: white;
+   margin-left: 150px;
+   border-bottom: 3px solid #375e97;
+}
+.e1 img,.n2 img {
+  float: left;
+}
+.n1 img {
+  float: right;
+}
+h1 {
+  font-size: 50px;
+  text-align: center;
+  color: black;
+}
+h2 {
+  font-size: 30px;
+  text-align: center;
+}
+h3{
+    font-size:20px;
+    text-align:left
+}
+ figure img {
+    display: flex;
+    flex-flow: column;
+    margin: auto;  
+}
+
+ figure ul {
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
+ figure li {
+  display: inline;
+  text-align: center;
+  flex: 4;
+}
+    aside {
+  background-color:white;
+  flex: 1;
+ margin-right: 0px;
+ float: left;
+    width: 150px;
+    height: 400px;
+}
+aside li {
+  padding-bottom: 10px;
+}
 
 
   </style>
