--- a/HAB1.html
+++ b/HAB1.html
@@ -107,6 +107,8 @@ nav a:hover {
 p,li {
    font-size: 16px;
   line-height: 2;
+  margin: 20px auto 0;
+  pading:20px;
 }
  article {
   background: white;
