--- a/HAB1.html
+++ b/HAB1.html
@@ -108,11 +108,12 @@ p,li {
    font-size: 16px;
   line-height: 2;
   margin: 20px auto 0;
-  pading:20px;
+  padding:20px;
 }
  article {
   background: white;
    margin-left: 150px;
+   padding:20px;
    border-bottom: 3px solid #375e97;
 }
 .e1 img,.n2 img {
