--- a/HAB1.html
+++ b/HAB1.html
@@ -112,7 +112,12 @@ p,li {
    margin-left: 150px;
    border-bottom: 3px solid #375e97;
 }
-
+ .e1 img,.n2 img {
+  float: left;
+}
+.n1 img {
+  float: right;
+}
 h1 {
   font-size: 50px;
   text-align: center;
@@ -127,13 +132,8 @@ h3{
     text-align:left
 }
    
- figure img {
-    display: flex;
-    flex-flow: column;
-    margin: auto;  
-}
+
  figure ul {
-  padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
