--- a/HAB1.html
+++ b/HAB1.html
@@ -131,7 +131,15 @@ h3{
     font-size:20px;
     text-align:left
 }
-  
+ figure img {
+    display: flex;
+    flex-flow: column;
+    margin: auto;  
+}  
+
+ figure li {
+  text-align: center;
+    } 
     aside {
   background-color:white;
   flex: 1;
