--- a/HAB1.html
+++ b/HAB1.html
@@ -136,10 +136,14 @@ h3{
     flex-flow: column;
     margin: auto;  
 }  
-
+figure ul {
+  list-style-type: none;
+  display: flex;
+}
  figure li {
+  display: inline;
   text-align: center;
-    } 
+} 
     aside {
   background-color:white;
   flex: 1;
