--- a/HAB1.html
+++ b/HAB1.html
@@ -108,7 +108,6 @@ p,li {
   line-height: 2;
 }
  article {
-  background: white;
    margin-left: 150px;
    border-bottom: 3px solid #375e97;
 }
@@ -133,6 +132,7 @@ h3{
 }
  figure img {
     display: flex;
+   padding:10px;
     flex-flow: column;  
 }  
 figure ul {
