--- a/HAB1.html
+++ b/HAB1.html
@@ -142,6 +142,7 @@ figure ul {
  figure li {
   display: inline;
   text-align: center;
+   padding:5px;
 } 
     aside {
   background-color:white;
