--- a/HAB1.html
+++ b/HAB1.html
@@ -143,7 +143,7 @@ figure ul {
     padding: 10px;
   display: inline;
   text-align: center;
-   padding:5px;
+  flex: 4;
 } 
     aside {
   background-color:white;
