--- a/HAB1.html
+++ b/HAB1.html
@@ -130,7 +130,12 @@ h3{
     font-size:20px;
     text-align:left
 }
- 
+ figure img {
+    display: flex;
+   padding:5px;
+    flex-flow: column;  
+}  
+
     aside {
   background-color:white;
   flex: 1;
