--- a/HAB1.html
+++ b/HAB1.html
@@ -135,7 +135,16 @@ h3{
    padding:5px;
     flex-flow: column;  
 }  
-
+figure ul {
+  list-style-type: none;
+  display: flex;
+}
+ figure li {
+    padding: 5px;
+  display: inline;
+  text-align: center;
+  flex: 4;
+} 
     aside {
   background-color:white;
   flex: 1;
