--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
      <ul>
         <li>
         <figcaption>东海原甲藻是东海HAB的主导原因种，其主导的HAB累计频数和累计面积显著高于其他原因种。东海原甲藻主要分布在福建宁德以北海域，并且89%的该原因种的HAB爆发于海表温度较高的5-6月份。该藻种虽无直接毒性，但大规模积聚的东海原甲藻能使海洋生物缺氧，并且腐烂的东海原甲藻能对鱼类等动物产生生理伤害从而危害海洋环境。</figcaption>
-       <img src="东海原甲藻.jpg" width="260" height="260">
+       <img src="images/东海原甲藻.jpg" width="260" height="260">
        </li>
         <li>
         <figcaption>米氏凯伦藻是东海海域累计频数和面积最高的有毒有害的原因种。该原因种能产生细胞毒素、溶血毒素和糖脂类毒素等毒素，其产生的溶血毒素和细胞毒素可造成鱼类大量死亡，该原因种主导的鱼毒性HAB造成了显著的经济损失。几乎(94%)都分布于5-6月的该原因种的HAB，该藻种主导的HAB造成了高达21亿元的经济损失。其中，福建海域内的该原因种主导的HAB则产生了97%的经济损失。</figcaption>
