--- a/HAB1.html
+++ b/HAB1.html
@@ -167,10 +167,10 @@ aside li {
 <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#m1">项目介绍</a></li>
-          <li><a href="#m2">有害藻华的定义</a></li>
-          <li><a href="#m3">有害藻华的危害</a></li>
-          <li><a href="#m4">有害藻华的原因种类型</a></li>
+          <li><a href="m1">项目介绍</a></li>
+          <li><a href="m2">有害藻华的定义</a></li>
+          <li><a href="m3">有害藻华的危害</a></li>
+          <li><a href="m4">有害藻华的原因种类型</a></li>
         </ul>
       </aside>
        
@@ -252,34 +252,5 @@ aside li {
     </div>
      </section>
 </section>
-
-<script>
-
-var tabs = document.querySelectorAll('.info-box li a');
-var panels = document.querySelectorAll('.info-box div');
-
-for(i = 0; i < tabs.length; i++) {
-  var tab = tabs[i];
-  setTabHandler(tab, i);
-}
-
-function setTabHandler(tab, tabPos) {
-  tab.onclick = function() {
-    for(i = 0; i < tabs.length; i++) {
-      tabs[i].className = '';
-    }
-
-    tab.className = 'active';
-
-    for(i = 0; i < panels.length; i++) {
-      panels[i].className = '';
-    }
-
-    panels[tabPos].className = 'active-panel';
-  }
-}
-
-</script>
-
 </body>
 </html>
