--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 	     
 	     <script>
 
-var tabs = document.querySelectorAll('.info-box li a');
+var tabs = document.querySelectorAll('nav a');
 var panels = document.querySelectorAll('.info-box div');
 
 for(i = 0; i < tabs.length; i++) {
