--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <li><a href="#n3">东海有害藻华的经济损失</a></li>
         </ul>
       </aside>    
-       <article id="n1">
+       <article id="n1" class="n1">
        <h2>东海有害藻华的时空分布</h2>
        <img src="images/donghai_new.jpg" alt="HABs in China" width="450" height="300">
             <p>1933年至今，中国4大海域的HAB频繁发生，其中东海是中国HAB爆发最严重的海域。1933-2018年期间，东海海域共发生了929次HAB,累计面积超过18 km<sup>2</sup>，HAB产生的累计直接经济损失则高达27亿元。</p>
@@ -112,14 +112,14 @@
          <p>从年际变化分布来看，1981年后，东海HAB的年累计面积有先波动增加后降低的趋势，其在1990年，2004和2005年达到峰值。东海HAB的年频率也有所增加，其在1991年达到峰值，随后有所下降。2000年后，HAB年频率再次大幅上升，2003年达到高峰，随后再次下降。991年至1999年，年面积不足1000km<sup>2</sup>，可能是由于监测强度和技术有限。相比之下，2000年以后赤潮发生的频率更高，2000-2010年，HAB年面积均超过6300km<sup>2</sup> <sup>[1]</sup>。</p>
       </article>
        
-       <article id="n2">
+       <article id="n2" class="n2">
        <h2>东海有害藻华的分布特征</h2>
        <img src="images/不同等级HAB的分布.png" alt="HABs in China" width="550" height="300">
         <p>基于东海HAB的单次累计覆盖面积的大小，HAB可被分为3个等级：小型HAB(0-50km<sup>2</sup>), 中型HAB(50-1000km<sup>2</sup>)和大型HAB(>1000km<sup>2</sup>)。相比较与大中型HAB，小型HAB是东海HAB的频数变化分布最为一致，而大型HAB的年面积则与东海总体的HAB面积变化的相关性更高。</p>
          <p>小型HAB的频数占东海总体的HAB的50%以上，并且造成经济损失93%的HAB为中小型HAB。小型HAB是东海HAB的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。对于中型HAB， 在2001-2010年期间的年频数都在20次以上。大型HAB对东海年度频数的贡献度很小，但其的爆发与否对HAB的年度累计面积变化至关重要。</p>
        </article>
        
-       <article id="n3">
+       <article id="n3" class="n3">
        <h2>东海有害藻华的经济损失</h2>
        <img src="images/HAB_产生经济损失.jpg" alt="HABs in China" width="500" height="330">
         <p>近年来，以米氏凯伦藻和东海原甲藻为主导原因种的HAB使东海近岸的海水养殖业蒙受了巨大的经济损失。</p>
