--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </ul>
       </figure>
          </article>
-     <article id="m3">
+     <article id="m3" class="m3">
     <h2>有害藻华的危害</h2>
 	      <img src="images/图片5.jpg" width="400" height="300">
        <ol>
@@ -83,7 +83,7 @@
           HABs能密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全。</li>
          </ol>
        </article>
-       <article id="m4">
+       <article id="m4" class="m4">
       <h2 >有害藻华的原因种类型</h2>
           <p>基于HABs统计数据可知，甲藻、硅藻是中国4大海区HABs的主导原因种。于此同时，着色鞭毛藻和蓝藻等原因种也有零星分布，作为有毒有害原因种主导的HABs则能使海洋生态安全和社会经济遭受损失。由于不同藻种的生长环境有所差异，不同海区不同年际和季节尺度下的HABs的主导原因种类型分布差异显著。中国近海HABs常见的主导原因种有：</p>
     <ul>
@@ -186,19 +186,19 @@
           <li><a href="#h3">米氏凯伦藻主导的HAB的环境特征</a></li>
         </ul>
       </aside>    
-       <article id="h1">
+       <article id="h1" class="h1">
        <h2>东海HAB的环境特征</h2>
           <img src="images/东海环境.png" width="500" height="300">
          <p>1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。</p>
          <p>对于东海HABs爆发时的海洋环境因素来说，温度和风速风向对大部分的HABs的爆发息息相关。其中，71%的东海海域的HABs的主导风向微弱的南风，并且88%的8月后的HABs都经历了南风。此外，73%的HABs的SST在20℃以上，并且7-10月的HABs的SST都高于21℃，这表明较高的SST对该海域的HAB持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HAB来说，79%的HABs的SST甚至都高于20℃.</p>
            </article>
-	    <article id="h2">
+	    <article id="h2" class="h2">
        <h2>东海原甲藻主导的HAB的环境特征</h2>
           <img src="images/东海原甲藻环境.png" width="500" height="300">
          <p>72%的东海原甲藻的有具体时间记录的HAB在开始时经历了SST升温的过程，同时有64%的该藻种的HAB在结束时伴随着SST的上升，并且有43%的该原因种的HAB在起始和消亡过程中都经历了SST的升温的过程。</p>
          <p>从东海原甲藻主导的HAB发生过程来看，风向风速对该藻种主导的HAB的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HAB的主导风向为微弱的东风，43%的HAB则甚至会经历微弱的东南风。</p>
            </article>
-	     <article id="h3">
+	     <article id="h3" class="h3">
        <h2>米氏凯伦藻主导的HAB的环境特征</h2>
           <img src="images/米氏凯伦藻环境.png" width="500" height="300">
          <p>米氏凯伦藻主导的HAB对SST温度环境更高，86%的有详细信息记录的HAB的SST高于20℃，并且7-11月的HAB期间的SST都高于23℃。对于HAB的风向风速来说，72%的HAB的主导风向为南风，其中40%的HAB的主导风向为西南风。</p>
