--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
      <figure>
      <ul>
         <li>
-  <img src="images/赤潮.jpg" width="260" height="260">
+  <img src="images/赤潮.jpg" width=100% height="260">
   <figcaption>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</figcaption>
         </li>
         <li>
-        <img src="images/绿潮.png" width="260" height="260">
+        <img src="images/绿潮.png" width=100% height="260">
         <figcaption>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</figcaption>
         </li>
         <li>
-        <img src="images/褐潮.jpg" width="260" height="260">
+        <img src="images/褐潮.jpg" width=100% height="260">
      <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</figcaption>
         </li>
       </ul>
@@ -146,15 +146,15 @@
           <figure>
      <ul>
         <li>
-		<img src="images/东海原甲藻.jpg" width=30% height="260">
+		<img src="images/东海原甲藻.jpg" width=100% height="260">
         <figcaption>东海原甲藻是东海HABs的主导原因种，其主导的HABs累计频数和累计面积显著高于其他原因种。东海原甲藻主要分布在福建宁德以北海域，并且89%的该原因种的HABs爆发于海表温度较高的5-6月份。该藻种虽无直接毒性，但大规模积聚的东海原甲藻能使海洋生物缺氧，并且腐烂的东海原甲藻能对鱼类等动物产生生理伤害从而危害海洋环境。</figcaption>
        </li>
         <li>
-		<img src="images/米氏凯伦藻.jpg" width=30% height="260">
+		<img src="images/米氏凯伦藻.jpg" width=100% height="260">
         <figcaption>米氏凯伦藻是东海海域累计频数和面积最高的有毒有害的原因种。该原因种能产生细胞毒素、溶血毒素和糖脂类毒素等毒素，其产生的溶血毒素和细胞毒素可造成鱼类大量死亡，该原因种主导的鱼毒性HABs造成了显著的经济损失。几乎(94%)都分布于5-6月的该原因种的HABs，该藻种主导的HABs造成了高达21亿元的经济损失。其中，福建海域内的该原因种主导的HABs则产生了97%的经济损失。</figcaption>
         </li>
         <li>
-		 <img src="images/中肋骨条藻.jpg" width=30% height="260">
+		 <img src="images/中肋骨条藻.jpg" width=100% height="260">
      <figcaption>作为东海HABs累计频数和面积最高的硅藻-中肋骨条藻主要分布于浙江海域，并且其主导的大型HABs都爆发于福建以北海域。与其他原因种的集中分布的特征相比，虽然78%的中肋骨条藻主导的HABs发生于5-8月，但在2和9月份等时间段也常有分布，并且其HABs主要分布于夏季。</figcaption>
         </li>
       </ul>
@@ -162,12 +162,10 @@
          </article>
          <article id="g2" class="g2">
        <h2>东海HAB原因种时间分布</h2>
-           <h3>主导原因种年分布</h3>
 		 <img src="images/主导原因种年度分布.png" width="500" height="300">
-        <p>近年以来，东海HABs的年度原因种程多样化、有害化趋势。21世纪前，主导原因种为夜光藻;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为各个年度的主导原因种，并且该海域的年度主导原因种较为单一，仅为甲藻和硅藻。</p>  
-            <h3>主导原因种季节分布</h3>
+        <figcaption>近年以来，东海HABs的年度原因种程多样化、有害化趋势。21世纪前，东海HABs的年度主导原因种为甲藻门的夜光藻，主导原因种种类单一;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为不同年度的主导原因种，并且该海域的年度主导原因种较为单一，仅为甲藻和硅藻。总体来说，东海原甲藻是2000年后的东海HABs的主导原因种。</figcaption>  
 		 <img src="images/主导原因种月度分布.png" width="500" height="300">
-        <p>在东海海域，硅藻(中肋骨条藻为主)为1-3, 7-9月份的HABs的主导原因种，东海原甲藻仅为4-5月的HABs的主导原因种，米氏凯伦藻和东海原甲藻则主导着6月份的HABs，同时夜光藻仅主导10月份的HABs。</p>  
+        <figcaption>从季节分布上来看，硅藻(中肋骨条藻为主)为1-3, 7-9月份的东海海域HABs的主导原因种(主导的HABs累计频数最高)；东海原甲藻则为4-5月的HABs的主导原因种，米氏凯伦藻和东海原甲藻则主导着6月份的HABs，同时夜光藻仅主导10月份的HABs。</figcaption>  
            </article>
           <article id="g3" class="g3">
        <h2>东海HAB的有毒有害原因种分布</h2>
