--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
          <article id="g2" class="g2">
        <h2>东海HAB原因种时间分布</h2>
 		 <img src="images/主导原因种年度分布.png" width="500" height="300">
+		<h3>东海HABs原因种年际分布</h3> 
         <figcaption>近年以来，东海HABs的年度原因种程多样化、有害化趋势。21世纪前，东海HABs的年度主导原因种为甲藻门的夜光藻，主导原因种种类单一;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为不同年度的主导原因种，并且该海域的年度主导原因种较为单一，仅为甲藻和硅藻。总体来说，东海原甲藻是2000年后的东海HABs的主导原因种。</figcaption>  
 		 <img src="images/主导原因种月度分布.png" width="500" height="300">
-        <figcaption>从季节分布上来看，硅藻(中肋骨条藻为主)为1-3, 7-9月份的东海海域HABs的主导原因种(主导的HABs累计频数最高)；东海原甲藻则为4-5月的HABs的主导原因种，米氏凯伦藻和东海原甲藻则主导着6月份的HABs，同时夜光藻仅主导10月份的HABs。</figcaption>  
+		 <h3>东海HABs原因种季节分布</h3> 
+        <figcaption>从季节分布上来看，硅藻(中肋骨条藻为主)为1-3, 7-9月份的东海海域HABs的主导原因种(主导的HABs累计频数最高)；东海原甲藻则为4-5月的HABs的主导原因种，米氏凯伦藻和东海原甲藻则主导着6月份的HABs，同时夜光藻仅主导10月份的HABs。从HABs的主导原因种的季节分布来看，东海原甲藻和米氏凯伦藻是东海HABs高发期的主导原因种，其主导的HABs的爆发次数的多少将决定当年东海HABs的严重程度。</figcaption>  
            </article>
           <article id="g3" class="g3">
        <h2>东海HAB的有毒有害原因种分布</h2>
