--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
       </aside>    
        <article id="g1" class="g1">
        <h2>东海HAB原因种空间分布</h2>
-         <img src="images/东海HAB原因种分布.png" width="500" height="300" style="display: inline-block;">
+	       <figure>
+         <img src="images/东海HAB原因种分布.png" width="500" height="300">
          <p>1933年以来，东海海域有详细信息记录的HABs中共出现了53种原因种，其中包含14种有毒有害原因种(如米氏凯伦藻(K.mikimotoi)和球形棕囊藻(P.globose))以及21种特有原因种(东海原甲藻(P.donghaiense)、短凯伦藻(K.brevis)和环胺藻(Azadinium)等)。甲藻、硅藻和原生动物是东海HAB最常见的原因种，其中主导着东海71%的HABs的甲藻是东海HABs的主导原因种。东海原甲藻是累计频数和累计面积最高的藻种，米氏凯伦藻、夜光藻(N.miliaris)中肋骨条藻((S.costatum),硅藻)也是累计频数和累计面积较高的原因种。从HABs原因种的分布来看:</p>
-          <figure>
+          </figure>
+		       <figure>
      <ul>
         <li>
 		<img src="images/东海原甲藻.jpg" width=100% height="260">
