--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
        
        <article id="n2" class="n2">
        <h2>东海有害藻华的分布特征</h2>
+	       <figure>
        <img src="images/不同等级HAB的分布.png" alt="HABs in China" width="700" height="380">
-        <p>基于东海HABs的单次累计覆盖面积的大小，HAB可被分为3个等级：小型HABs(0-50km<sup>2</sup>), 中型HABs(50-1000km<sup>2</sup>)和大型HABs>1000km<sup>2</sup>)。相比较与大中型HAB，小型HABs是东海HABs的总体上的频数变化分布最为一致，而大型HAB的年累计面积则与东海总体的HAB面积年度变化的相关性更高。</p>
-         <p>小型HABs的频数占东海总体的HABs的50%以上，并且造成经济损失93%的HAB为中小型HABs。小型HAB是东海HABs的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。对于中型HABs， 在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。大型HABs对东海年度频数的贡献度很小，但其的爆发与否对HABs的年度累计面积变化至关重要。</p>
-       </article>
+        <p>基于东海HABs的单次累计覆盖面积的大小，HABs可被分为3个等级：小型HABs(0-50km<sup>2</sup>), 中型HABs(50-1000km<sup>2</sup>)和大型HABs>1000km<sup>2</sup>)。相比较与大中型HABs，小型HABs是东海HABs的总体上的频数变化分布最为一致，而大型HABs的年累计面积则与东海总体的HABs面积年度变化的相关性更高。</p>
+         <p>小型HABs的频数占东海总体的HABs的50%以上，并且造成经济损失93%的HABs为中小型HABs。小型HABs是东海HABs的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。对于中型HABs，在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。大型HABs对东海年度频数的贡献度很小，但其的爆发与否对HABs的年度累计面积变化至关重要。</p>
+               </figure>
+        </article>
        
        <article id="n3" class="n3">
        <h2>东海有害藻华的经济损失</h2>
@@ -142,7 +144,7 @@
        <article id="g1" class="g1">
        <h2>东海HAB原因种空间分布</h2>
 	       <figure>
-         <img src="images/东海HAB原因种分布.png" width="500" height="300">
+         <img src="images/东海HAB原因种分布.png" width="550" height="330">
          <p>1933年以来，东海海域有详细信息记录的HABs中共出现了53种原因种，其中包含14种有毒有害原因种(如米氏凯伦藻(K.mikimotoi)和球形棕囊藻(P.globose))以及21种特有原因种(东海原甲藻(P.donghaiense)、短凯伦藻(K.brevis)和环胺藻(Azadinium)等)。甲藻、硅藻和原生动物是东海HAB最常见的原因种，其中主导着东海71%的HABs的甲藻是东海HABs的主导原因种。东海原甲藻是累计频数和累计面积最高的藻种，米氏凯伦藻、夜光藻(N.miliaris)中肋骨条藻((S.costatum),硅藻)也是累计频数和累计面积较高的原因种。从HABs原因种的分布来看:</p>
           </figure>
 		       <figure>
