--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </aside>
        
      <article class="e1">
-    <img src="images/封面2.jpg" alt="HABs in China" width="600" height="320">
-        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
+    <img src="images/封面2.jpg" alt="HABs in China" width=200% height="320">
+        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。有害藻华已经对中国近海生态系统安全产生了显著的负面影响。</p>
          <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
           <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
     </article>
@@ -69,7 +69,7 @@
          </article>
      <article id="m3" class="m3">
     <h2>有害藻华的危害</h2>
-	      <img src="images/图片5.jpg" width="400" height="300" border-radius="300">
+	      <img src="images/图片5.jpg" width="400" height="400">
        <ol>
           <li>HABs能导致大量海洋生物死亡<br>
            部分藻种能产生毒素，损伤海洋生物组织、改变水体理化环境等危害海洋生物生存，或使生物染毒甚至死亡。</li>
@@ -191,28 +191,28 @@
       <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#h1">东海HAB的环境特征</a></li>
-          <li><a href="#h2">东海原甲藻主导的HAB的环境特征</a></li>
-          <li><a href="#h3">米氏凯伦藻主导的HAB的环境特征</a></li>
+          <li><a href="#h1">东海HABs的环境特征</a></li>
+          <li><a href="#h2">东海原甲藻主导的HABs的环境特征</a></li>
+          <li><a href="#h3">米氏凯伦藻主导的HABs的环境特征</a></li>
         </ul>
       </aside>    
        <article id="h1" class="h1">
-       <h2>东海HAB的环境特征</h2>
+       <h2>东海HABs的环境特征</h2>
           <img src="images/东海环境.png" width="550" height="380">
          <p>1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。</p>
-         <p>对于东海HABs爆发时的海洋环境因素来说，温度和风速风向对大部分的HABs的爆发息息相关。其中，71%的东海海域的HABs的主导风向微弱的南风，并且88%的8月后的HABs都经历了南风。此外，73%的HABs的SST在20℃以上，并且7-10月的HABs的SST都高于21℃，这表明较高的SST对该海域的HAB持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HAB来说，79%的HABs的SST甚至都高于20℃.</p>
+         <p>对于东海HABs爆发时的海洋环境因素来说，温度和风速风向对大部分的HABs的爆发息息相关。其中，71%的东海海域的HABs的主导风向微弱的南风，并且88%的8月后的HABs都经历了南风。此外，73%的HABs的SST在20℃以上，并且7-10月的HABs的SST都高于21℃，这表明较高的SST对该海域的HABs持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HABs来说，79%的HABs的SST甚至都高于20℃.</p>
            </article>
 	    <article id="h2" class="h2">
-       <h2>东海原甲藻主导的HAB的环境特征</h2>
+       <h2>东海原甲藻主导的HABs的环境特征</h2>
           <img src="images/东海原甲藻环境.png" width="550" height="380">
-         <p>72%的东海原甲藻的有具体时间记录的HAB在开始时经历了SST升温的过程，同时有64%的该藻种的HAB在结束时伴随着SST的上升，并且有43%的该原因种的HAB在起始和消亡过程中都经历了SST的升温的过程。</p>
-         <p>从东海原甲藻主导的HAB发生过程来看，风向风速对该藻种主导的HAB的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HAB的主导风向为微弱的东风，43%的HAB则甚至会经历微弱的东南风。</p>
+         <p>72%的东海原甲藻的有具体时间记录的HAB在开始时经历了SST升温的过程，同时有64%的该藻种的HABs在结束时伴随着SST的上升，并且有43%的该原因种的HABs在起始和消亡过程中都经历了SST的升温的过程。</p>
+         <p>从东海原甲藻主导的HABs发生过程来看，风向风速对该藻种主导的HAB的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HAB的主导风向为微弱的东风，43%的HABs则甚至会经历微弱的东南风。</p>
            </article>
 	     <article id="h3" class="h3">
-       <h2>米氏凯伦藻主导的HAB的环境特征</h2>
+       <h2>米氏凯伦藻主导的HABs的环境特征</h2>
           <img src="images/米氏凯伦藻环境.png" width="550" height="380">
-         <p>米氏凯伦藻主导的HAB对SST温度环境更高，86%的有详细信息记录的HAB的SST高于20℃，并且7-11月的HAB期间的SST都高于23℃。对于HAB的风向风速来说，72%的HAB的主导风向为南风，其中40%的HAB的主导风向为西南风。</p>
-         <p>在HAB的开始和结束期间，SST的变化对该藻种的HAB的变化密切相关。其中，70%的该藻种主导的HAB在开始时经历了SST的上升的过程，有65%的HAB结束于SST的上升，并且有42%的HAB在开始和结束期间经历了SST的上升。</p>
+         <p>米氏凯伦藻主导的HABs对SST温度环境更高，86%的有详细信息记录的HABs的SST高于20℃，并且7-11月的HABs期间的SST都高于23℃。对于HABs的风向风速来说，72%的HABs的主导风向为南风，其中40%的HABs的主导风向为西南风。</p>
+         <p>在HABs的开始和结束期间，SST的变化对该藻种的HABs的变化密切相关。其中，70%的该藻种主导的HABs在开始时经历了SST的上升的过程，有65%的HABs结束于SST的上升，并且有42%的HABs在开始和结束期间经历了SST的上升。</p>
            </article>
 		   </div>
 	      </section>
