--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </aside>
        
      <article class="e1">
-    <img src="images/封面2.jpg" alt="HABs in China" width="610" height="320">
-        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。有害藻华已经对中国近海生态系统安全产生了显著的负面影响。</p>
+    <img src="images/封面2.jpg" alt="HABs in China" width="650" height="320">
+        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。21世纪以来的频发爆发的有害藻华已经对中国近海生态系统安全产生了显著的负面影响。</p>
          <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
           <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
     </article>
