--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </aside>    
        <article id="n1" class="n1">
        <h2>东海有害藻华的时空分布</h2>
-       <img src="images/donghai_new.jpg" alt="HABs in China" width="450" height="380">
+       <img src="images/donghai_new.jpg" alt="HABs in China" width="450" height="395">
             <p>1933年至今，中国4大海域的HABs频繁发生，其中东海是中国HABs爆发最严重的海域。1933-2018年期间，东海海域共发生了929次HAB,累计面积超过18 km<sup>2</sup>，HABs产生的累计直接经济损失则高达27亿元。</p>
         <p>长江入海口到浙江一带海域是东海HAB灾害最为严重海域，其中94%的单次计面积大于1000 km<sup>2</sup>的HABs发生于此，并且其主导原因种为东海原甲藻和米氏凯伦藻为主。集中爆发的大型HABs给长江口的海洋生态环境安全造成了很大的隐患,爆发于浙江舟山海域的HABs易使当地近海水产生直接经济损失。与之相比，福建沿海的HABs则以中小型（面积不大于1000 km<sup>2</sup>）为主。但，该区域以米氏凯伦藻为主导原因种的HABs则使福建近海水产养殖业产生了高达24亿元的直接经济损失。</p>
         <p>从季节变化分布来看，71%的东海HABs爆发于5-7月,其他月份的HABs零星分布。自2000年以来，在寒冷的月份（10月至3月）发现了更多的小范围赤潮事件。</p>
@@ -199,20 +199,24 @@
        <article id="h1" class="h1">
        <h2>东海HABs的环境特征</h2>
           <img src="images/东海环境.png" width="550" height="380">
-         <p>1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。</p>
+         <p>基于各个有持续时间和地理位置等具体信息记录的HABs，本研究统计了1987年以来的HABs爆发的地理范围内的Pre, SST, SST_a, Wind和2015-2018年的Salinity等变量。在此基础上，本文统计了东海海域的有详细记录的HABs在开始、持续和结束期间的具体的海洋环境变量的分布特征。</p>
+	 <p>从HABs爆发的和消亡的过起始程中的环境因素的变化来看，海洋表面温度的变化对东海HABs的爆发和终止有重要的作用。1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。于此同时，其他变量的变化趋势并无高于50%的相同的变化趋势特征</p>
          <p>对于东海HABs爆发时的海洋环境因素来说，温度和风速风向对大部分的HABs的爆发息息相关。其中，71%的东海海域的HABs的主导风向微弱的南风，并且88%的8月后的HABs都经历了南风。此外，73%的HABs的SST在20℃以上，并且7-10月的HABs的SST都高于21℃，这表明较高的SST对该海域的HABs持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HABs来说，79%的HABs的SST甚至都高于20℃.</p>
-           </article>
+         <p>总体上来看，由于海洋表面风的运输和扩散的能力以及海洋表面温度对藻类繁殖速率的影响作用，风速风向和海洋表面温度对东海的HABs影响深刻。</p>
+	    </article>
 	    <article id="h2" class="h2">
        <h2>东海原甲藻主导的HABs的环境特征</h2>
           <img src="images/东海原甲藻环境.png" width="550" height="380">
-         <p>72%的东海原甲藻的有具体时间记录的HAB在开始时经历了SST升温的过程，同时有64%的该藻种的HABs在结束时伴随着SST的上升，并且有43%的该原因种的HABs在起始和消亡过程中都经历了SST的升温的过程。</p>
-         <p>从东海原甲藻主导的HABs发生过程来看，风向风速对该藻种主导的HAB的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HAB的主导风向为微弱的东风，43%的HABs则甚至会经历微弱的东南风。</p>
+         <p>由于东海原甲藻(2002年定种后开始官方记录)是东海海域21世纪后的HAB的最主要的原因种，本研究首先分析了2003年以来的254次的东海海域的东海原甲藻主导的HAB的海洋环境的变化。东海原甲藻是东海海域HABs的主导原因种，确定该藻种的HABs变化的主导驱动因素对掌握该种HABs的变化机制至关重要。</p>
+	<p>从东海原甲藻主导的HABs发生的起始和终止阶段来看，72%的东海原甲藻的有具体时间记录的HABs在开始时经历了SST升温的过程，同时有64%的该藻种的HABs在结束时伴随着SST的上升，并且有43%的该原因种的HABs在起始和消亡过程中都经历了SST的升温的过程。</p>
+         <p>从东海原甲藻主导的HABs发生过程来看，风向风速对该藻种主导的HABs的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HABs的主导风向为微弱的东风，43%的HABs则甚至会经历微弱的东南风。同时，67%的东海原甲藻的HABs的SST高于20℃，这表明较高的SST也是该藻种主导的HABs发生过程的重要环境因素。</p>
            </article>
 	     <article id="h3" class="h3">
        <h2>米氏凯伦藻主导的HABs的环境特征</h2>
           <img src="images/米氏凯伦藻环境.png" width="550" height="380">
+	 <p>作为东海海域主导有毒有害原因种-米氏凯伦藻主导的HABs的爆发在很大程度上能产生显著的经济损失。因此量化米氏凯伦藻主导的HABs的爆发过程的环境特征信息对于了解该原因种主导的HABs的爆发机制十分重要</p>
+         <p>在HABs的开始和结束期间，SST的变化对米氏凯伦藻主导的HABs的变化密切相关。其中，70%的该藻种主导的HABs在开始时经历了SST的上升的过程，有65%的HABs结束于SST的上升，并且有42%的HABs在开始和结束期间经历了SST的上升。</p>
          <p>米氏凯伦藻主导的HABs对SST温度环境更高，86%的有详细信息记录的HABs的SST高于20℃，并且7-11月的HABs期间的SST都高于23℃。对于HABs的风向风速来说，72%的HABs的主导风向为南风，其中40%的HABs的主导风向为西南风。</p>
-         <p>在HABs的开始和结束期间，SST的变化对该藻种的HABs的变化密切相关。其中，70%的该藻种主导的HABs在开始时经历了SST的上升的过程，有65%的HABs结束于SST的上升，并且有42%的HABs在开始和结束期间经历了SST的上升。</p>
            </article>
 		   </div>
 	      </section>
