--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
       <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#h1">东海HABs的环境特征</a></li>
+          <li><a href="#hh1">东海HABs的环境特征</a></li>
           <li><a href="#h2">东海原甲藻主导的HABs的环境特征</a></li>
           <li><a href="#h3">米氏凯伦藻主导的HABs的环境特征</a></li>
         </ul>
       </aside>    
-       <article id="h1" class="h1">
+       <article id="hh1" class="hh1">
        <h2>东海HABs的环境特征</h2>
           <img src="images/东海环境.png" width="550" height="380">
          <p>基于各个有持续时间和地理位置等具体信息记录的HABs，本研究统计了1987年以来的HABs爆发的地理范围内的Pre, SST, SST_a, Wind和2015-2018年的Salinity等变量。在此基础上，本文统计了东海海域的有详细记录的HABs在开始、持续和结束期间的具体的海洋环境变量的分布特征。</p>
