--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
       <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#g1">东海HAB原因种空间分布</a></li>
-          <li><a href="#g2">东海HAB原因种时间分布</a></li>
-          <li><a href="#g3">东海HAB的有毒有害原因种分布</a></li>
+          <li><a href="#g1">东海HABs原因种空间分布</a></li>
+          <li><a href="#g2">东海HABs原因种时间分布</a></li>
+          <li><a href="#g3">东海HABs的有毒有害原因种分布</a></li>
         </ul>
       </aside>    
        <article id="g1" class="g1">
-       <h2>东海HAB原因种空间分布</h2>
+       <h2>东海HABs原因种空间分布</h2>
 	       <figure>
          <img src="images/东海HAB原因种分布.png" width="550" height="330">
          <p>1933年以来，东海海域有详细信息记录的HABs中共出现了53种原因种，其中包含14种有毒有害原因种(如米氏凯伦藻(K.mikimotoi)和球形棕囊藻(P.globose))以及21种特有原因种(东海原甲藻(P.donghaiense)、短凯伦藻(K.brevis)和环胺藻(Azadinium)等)。甲藻、硅藻和原生动物是东海HAB最常见的原因种，其中主导着东海71%的HABs的甲藻是东海HABs的主导原因种。东海原甲藻是累计频数和累计面积最高的藻种，米氏凯伦藻、夜光藻(N.miliaris)中肋骨条藻((S.costatum),硅藻)也是累计频数和累计面积较高的原因种。从HABs原因种的分布来看:</p>
@@ -165,7 +165,7 @@
       </figure>
          </article>
          <article id="g2" class="g2">
-       <h2>东海HAB原因种时间分布</h2>
+       <h2>东海HABs原因种时间分布</h2>
 		 <figure id="dd1" class="dd1">
 		 <img src="images/主导原因种年度分布.png" width="500" height="320">
 		<h3>东海HABs原因种年际分布</h3> 
@@ -180,9 +180,9 @@
                  </figure>
        </article>
           <article id="g3" class="g3">
-       <h2>东海HAB的有毒有害原因种分布</h2>
+       <h2>东海HABs的有毒有害原因种分布</h2>
             <img src="images/东海有害赤潮种.png" width="500" height="310">
-            <p>有毒有害原因种的HAB集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HABs的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HABs的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HABs的地理范围在不断扩大。</P>
+            <p>有毒有害原因种的HABs集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HABs的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HABs的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HABs的地理范围在不断扩大。</P>
              <P>从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HABs，并且给东海沿岸省市带来了严重的经济损失。然而，赤潮异弯藻对5月份的有毒有害的HABs影响较大，其他月份并未出现频数超过2次相同有毒有害原因种主导额HABs。</p>
            </article>
 			</div>
