--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav>
 	    <ul>
           <li> <a class=class="active" href="#">首页</a></li>
-        <li><a href="#">HAB的时空分布</a></li>
-        <li><a href="#">HAB原因种的时空分布</a></li>
-        <li><a href="#">HAB的环境影响因素</a></li>
+        <li><a href="#">有害藻华的时空分布</a></li>
+        <li><a href="#">有害藻华原因种的时空分布</a></li>
+        <li><a href="#">有害藻华的环境影响因素</a></li>
 		    </ul>
     </nav>
      
@@ -136,13 +136,13 @@
       <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#g1">东海HABs原因种空间分布</a></li>
-          <li><a href="#g2">东海HABs原因种时间分布</a></li>
-          <li><a href="#g3">东海HABs的有毒有害原因种分布</a></li>
+          <li><a href="#g1">东海有害藻华原因种空间分布</a></li>
+          <li><a href="#g2">东海有害藻华原因种时间分布</a></li>
+          <li><a href="#g3">东海有害藻华的有毒有害原因种分布</a></li>
         </ul>
       </aside>    
        <article id="g1" class="g1">
-       <h2>东海HABs原因种空间分布</h2>
+       <h2>东海有害藻华原因种空间分布</h2>
 	       <figure>
          <img src="images/东海HAB原因种分布.png" width="550" height="330">
          <p>1933年以来，东海海域有详细信息记录的HABs中共出现了53种原因种，其中包含14种有毒有害原因种(如米氏凯伦藻(K.mikimotoi)和球形棕囊藻(P.globose))以及21种特有原因种(东海原甲藻(P.donghaiense)、短凯伦藻(K.brevis)和环胺藻(Azadinium)等)。甲藻、硅藻和原生动物是东海HAB最常见的原因种，其中主导着东海71%的HABs的甲藻是东海HABs的主导原因种。东海原甲藻是累计频数和累计面积最高的藻种，米氏凯伦藻、夜光藻(N.miliaris)中肋骨条藻((S.costatum),硅藻)也是累计频数和累计面积较高的原因种。从HABs原因种的分布来看:</p>
@@ -165,7 +165,7 @@
       </figure>
          </article>
          <article id="g2" class="g2">
-       <h2>东海HABs原因种时间分布</h2>
+       <h2>东海有害藻华原因种时间分布</h2>
 		 <figure id="dd1" class="dd1">
 		 <img src="images/主导原因种年度分布.png" width="500" height="320">
 		<h3>东海HABs原因种年际分布</h3> 
@@ -180,7 +180,7 @@
                  </figure>
        </article>
           <article id="g3" class="g3">
-       <h2>东海HABs的有毒有害原因种分布</h2>
+       <h2>东海有害藻华的有毒有害原因种分布</h2>
             <img src="images/东海有害赤潮种.png" width="500" height="310">
             <p>有毒有害原因种的HABs集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HABs的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HABs的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HABs的地理范围在不断扩大。</P>
              <P>从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HABs，并且给东海沿岸省市带来了严重的经济损失。然而，赤潮异弯藻对5月份的有毒有害的HABs影响较大，其他月份并未出现频数超过2次相同有毒有害原因种主导额HABs。</p>
@@ -191,13 +191,13 @@
       <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#hh1">东海HABs的环境特征</a></li>
-          <li><a href="#h2">东海原甲藻主导的HABs的环境特征</a></li>
-          <li><a href="#h3">米氏凯伦藻主导的HABs的环境特征</a></li>
+          <li><a href="#hh1">东海有害藻华的环境特征</a></li>
+          <li><a href="#h2">东海原甲藻主导的有害藻华的环境特征</a></li>
+          <li><a href="#h3">米氏凯伦藻主导的有害藻华的环境特征</a></li>
         </ul>
       </aside>    
        <article id="hh1" class="hh1">
-       <h2>东海HABs的环境特征</h2>
+       <h2>东海有害藻华的环境特征</h2>
           <img src="images/东海环境.png" width="550" height="380">
          <p>基于各个有持续时间和地理位置等具体信息记录的HABs，本研究统计了1987年以来的HABs爆发的地理范围内的Pre, SST, SST_a, Wind和2015-2018年的Salinity等变量。在此基础上，本文统计了东海海域的有详细记录的HABs在开始、持续和结束期间的具体的海洋环境变量的分布特征。</p>
 	 <p>从HABs爆发的和消亡的过起始程中的环境因素的变化来看，海洋表面温度的变化对东海HABs的爆发和终止有重要的作用。1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。于此同时，其他变量的变化趋势并无高于50%的相同的变化趋势特征</p>
@@ -205,14 +205,14 @@
          <p>总体上来看，由于海洋表面风的运输和扩散的能力以及海洋表面温度对藻类繁殖速率的影响作用，风速风向和海洋表面温度对东海的HABs影响深刻。</p>
 	    </article>
 	    <article id="h2" class="h2">
-       <h2>东海原甲藻主导的HABs的环境特征</h2>
+       <h2>东海原甲藻主导的有害藻华的环境特征</h2>
           <img src="images/东海原甲藻环境.png" width="550" height="380">
          <p>由于东海原甲藻(2002年定种后开始官方记录)是东海海域21世纪后的HAB的最主要的原因种，本研究首先分析了2003年以来的254次的东海海域的东海原甲藻主导的HAB的海洋环境的变化。东海原甲藻是东海海域HABs的主导原因种，确定该藻种的HABs变化的主导驱动因素对掌握该种HABs的变化机制至关重要。</p>
 	<p>从东海原甲藻主导的HABs发生的起始和终止阶段来看，72%的东海原甲藻的有具体时间记录的HABs在开始时经历了SST升温的过程，同时有64%的该藻种的HABs在结束时伴随着SST的上升，并且有43%的该原因种的HABs在起始和消亡过程中都经历了SST的升温的过程。</p>
          <p>从东海原甲藻主导的HABs发生过程来看，风向风速对该藻种主导的HABs的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HABs的主导风向为微弱的东风，43%的HABs则甚至会经历微弱的东南风。同时，67%的东海原甲藻的HABs的SST高于20℃，这表明较高的SST也是该藻种主导的HABs发生过程的重要环境因素。</p>
            </article>
 	     <article id="h3" class="h3">
-       <h2>米氏凯伦藻主导的HABs的环境特征</h2>
+       <h2>米氏凯伦藻主导的有害藻华的环境特征</h2>
           <img src="images/米氏凯伦藻环境.png" width="550" height="380">
 	 <p>作为东海海域主导有毒有害原因种-米氏凯伦藻主导的HABs的爆发在很大程度上能产生显著的经济损失。因此量化米氏凯伦藻主导的HABs的爆发过程的环境特征信息对于了解该原因种主导的HABs的爆发机制十分重要</p>
          <p>在HABs的开始和结束期间，SST的变化对米氏凯伦藻主导的HABs的变化密切相关。其中，70%的该藻种主导的HABs在开始时经历了SST的上升的过程，有65%的HABs结束于SST的上升，并且有42%的HABs在开始和结束期间经历了SST的上升。</p>
