--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
         <li>
         <img src="images/褐潮.jpg" width="260" height="260">
-     <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</figcaption>
+     <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HABs仅发生在美国、南非和中国附近海域。于此同时，该种HABs给近海生态系统造成了显著的伤害。</figcaption>
         </li>
       </ul>
       </figure>
@@ -76,7 +76,7 @@
           <li>危害人体健康<br>
            直接接触有毒的HAB以及食用含有毒素的鱼类会对人体健康产生显著的危害。</li>
           <li>HABs能产生显著的渔业经济损失<br>
-           有毒有害的HABs会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失,例如，2012年中国近海的HABs导致了约20亿的渔业直接经济损失。</li>
+           有毒有害的HABs会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失,例如，2012年中国近海的米氏凯伦藻主导的HABs造成了约20亿的渔业直接经济损失。</li>
           <li>影响滨海景观<br>
           HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
           <li>HABs能能破坏海洋生态系统<br>
@@ -195,7 +195,7 @@
        <article id="hh1" class="hh1">
        <h2>东海有害藻华的环境特征</h2>
           <img src="images/东海环境.png" width="580" height="400">
-         <p>基于各个有持续时间和地理位置等具体信息记录的HABs，本研究统计了1987年以来的HABs爆发的地理范围内的Pre, SST, SST_a, Wind和2015-2018年的Salinity等变量。在此基础上，本文统计了东海海域的有详细记录的HABs在开始、持续和结束期间的具体的海洋环境变量的分布特征。</p>
+         <p>基于各个有持续时间和地理位置等具体信息记录的HABs，本研究统计了1987年以来的HABs爆发的地理范围内的降水(Pre), 海洋表面温度(SST), 海洋表面温度异常(SST_a),风向风速(Wind)和2015-2018年的盐度(Salinity)等变量。在此基础上，本文统计了东海海域的有详细记录的HABs在开始、持续和结束期间的具体的海洋环境变量的分布特征。</p>
 	 <p>从HABs爆发的和消亡的过起始程中的环境因素的变化来看，海洋表面温度的变化对东海HABs的爆发和终止有重要的作用。1981年以来，海洋表面温度(SST)的变化对东海海域的HABs的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HABs经历了SST升温，62%的HABs则在SST升温中消亡。于此同时，其他变量的变化趋势并无高于50%的相同的变化趋势特征</p>
          <p>对于东海HABs爆发时的海洋环境因素来说，温度和风速风向对大部分的HABs的爆发息息相关。其中，71%的东海海域的HABs的主导风向微弱的南风，并且88%的8月后的HABs都经历了南风。此外，73%的HABs的SST在20℃以上，并且7-10月的HABs的SST都高于21℃，这表明较高的SST对该海域的HABs持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HABs来说，79%的HABs的SST甚至都高于20℃.</p>
          <p>总体上来看，由于海洋表面风的运输和扩散的能力以及海洋表面温度对藻类繁殖速率的影响作用，风速风向和海洋表面温度对东海的HABs影响深刻。</p>
