--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
          </article>
          <article id="g2" class="g2">
        <h2>东海有害藻华原因种时间分布</h2>
-		 <img id="dd1" class="dd1" src="images/主导原因种年度分布.png" width="570" height="320">
+		 <img id="dd1" class="dd1" src="images/主导原因种年度分布.png" width="560" height="320">
 		<h3>东海HABs原因种年际分布</h3> 
-                <p>近年以来，东海HABs的年度主导原因种程多样化、有害化趋势。21世纪前，东海HABs的年度主导原因种为甲藻门的夜光藻，主导原因种种类单一;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为不同年度的主导原因种，并且该海域的年度主导原因种较为单一，仅为甲藻和硅藻。</p>
-		 <p>从HABs年总体际分布的来看，东海原甲藻是2000年后的东海HABs的主导原因种。</p>   
-		 <img id="dd2" class="dd2" src="images/主导原因种月度分布.png" width="570" height="320">
+                <p>近年以来，东海HABs的年度主导原因种程多样化、有害化趋势。21世纪前，东海HABs的年度主导原因种为甲藻门的夜光藻，主导原因种种类单一;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为不同年度的主导原因种。21世纪后，在HABs记录信息更加完善以及东海HABs种类更加多元化的背景下，东海HABs的年际主导原因种逐渐从无毒有害的甲藻转变为有毒有害的东海原甲藻和米氏凯伦藻。</p>
+		 <p>从HABs年总体际分布的来看，东海原甲藻和米氏凯伦藻是2000年后的东海HABs的主导原因种。</p>   
+		 <img id="dd2" class="dd2" src="images/主导原因种月度分布.png" width="560" height="320">
 		 <h3>东海HABs原因种季节分布</h3> 
                  <p>从季节分布上来看，硅藻(中肋骨条藻为主)为1-3, 7-9月份的东海海域HABs的主导原因种(主导的HABs累计频数最高)；东海原甲藻则为4-5月的HABs的主导原因种;米氏凯伦藻和东海原甲藻则主导着6月份的HABs;同时夜光藻仅主导10月份的东海的HABs。</p>
 	 	 <p>从HABs的主导原因种的总体季节分布的来看，东海原甲藻和米氏凯伦藻是东海HABs高发期的主导原因种，其主导的HABs的爆发次数的多少将决定当年东海HABs的严重程度。</p>  
        </article>
           <article id="g3" class="g3">
        <h2>东海有害藻华的有毒有害原因种分布</h2>
-            <img src="images/东海有害赤潮种.png" width="500" height="310">
+            <img src="images/东海有害赤潮种.png" width="560" height="330">
             <p>有毒有害原因种的HABs集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HABs的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HABs的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HABs的地理范围在不断扩大。</P>
              <P>从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HABs，并且给东海沿岸省市带来了严重的经济损失。然而，赤潮异弯藻对5月份的有毒有害的HABs影响较大，其他月份并未出现频数超过2次相同有毒有害原因种主导额HABs。</p>
            </article>
