--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <p>近年来，以米氏凯伦藻和东海原甲藻为主导原因种的HABs使东海近岸的海水养殖业蒙受了巨大的经济损失。</p>
           <p>从季节分布来看，93%的产生了显著经济损失的HABs集中发生于5-6月，其他月份的HABs很少使东海近海水产养殖业产生显著的直接经济损失。</p>
          <p>从年际变化分布来看，1997年起，东海HABs的直接经济损失开始快速增加，2012年达到峰值 （20亿元），此后年份的HABs没有产生明显的直接经济损失。于此同时，福建海域的HABs产生经济损失的热点海域，63%的HABs产生了东海HABs的88%的经济损失。</p>
-          <p>[1] Zhou Y *, Weijin Yan, Wenyu Wei. (accepted) Effect of sea surface temperature and precipitation on annual frequency of harmful algal blooms in the East China Sea</p>
+          <p>[1] Zhou Y *, Weijin Yan, Wenyu Wei. (accepted) Effect of sea surface temperature and precipitation on annual frequency of harmful algal blooms in the East China Sea. Environmental Pollution.</p>
        </article>
 		      </div> 
      
@@ -199,7 +199,7 @@
 	    <article id="h2" class="h2">
        <h2>东海原甲藻主导的有害藻华的环境特征</h2>
           <img src="images/东海原甲藻环境.png" width="580" height="400">
-         <p>由于东海原甲藻(2002年定种后开始官方记录)是东海海域21世纪后的HAB的最主要的原因种，本研究首先分析了2003年以来的254次的东海海域的东海原甲藻主导的HAB的海洋环境的变化。东海原甲藻是东海海域HABs的主导原因种，确定该藻种的HABs变化的主导驱动因素对掌握该种HABs的变化机制至关重要。</p>
+         <p>由于东海原甲藻(2002年定种后开始官方记录)是东海海域21世纪后的HABs的最主要的原因种，本研究首先分析了2003年以来的254次的东海海域的东海原甲藻主导的HABs的海洋环境的变化。东海原甲藻是东海海域HABs的主导原因种，确定该藻种的HABs变化的主导驱动因素对掌握该种HABs的变化机制至关重要。</p>
 	<p>从东海原甲藻主导的HABs发生的起始和终止阶段来看，72%的东海原甲藻的有具体时间记录的HABs在开始时经历了SST升温的过程，同时有64%的该藻种的HABs在结束时伴随着SST的上升，并且有43%的该原因种的HABs在起始和消亡过程中都经历了SST的升温的过程。</p>
          <p>从东海原甲藻主导的HABs发生过程来看，风向风速对该藻种主导的HABs的爆发过程有重要的影响。其中，82%的东海原甲藻主导的HABs的主导风向为微弱的东风，43%的HABs则甚至会经历微弱的东南风。同时，67%的东海原甲藻的HABs的SST高于20℃，这表明较高的SST也是该藻种主导的HABs发生过程的重要环境因素。</p>
            </article>
