--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 		<h3>东海HABs原因种年际分布</h3> 
                 <p>近年以来，东海HABs的年度主导原因种程多样化、有害化趋势。21世纪前，东海HABs的年度主导原因种为甲藻门的夜光藻，主导原因种种类单一;2000-2018年期间：东海原甲藻，米氏凯伦藻和中肋骨条藻交替成为不同年度的主导原因种。21世纪后，在HABs记录信息更加完善以及东海HABs种类更加多元化的背景下，东海HABs的年际主导原因种逐渐从无毒有害的甲藻转变为有毒有害的东海原甲藻和米氏凯伦藻。</p>
 		 <p>从HABs年总体际分布的来看，东海原甲藻和米氏凯伦藻是2000年后的东海HABs的主导原因种。</p>   
-		 <img id="dd2" class="dd2" src="images/主导原因种月度分布.png" width="560" height="320">
+		 <img id="dd2" class="dd2" src="images/主导原因种月度分布.png" width="540" height="320">
 		 <h3>东海HABs原因种季节分布</h3> 
                  <p>从季节分布上来看，硅藻(中肋骨条藻为主)为1-3, 7-9月份的东海海域HABs的主导原因种(主导的HABs累计频数最高)；东海原甲藻则为4-5月的HABs的主导原因种;米氏凯伦藻和东海原甲藻则主导着6月份的HABs;同时夜光藻仅主导10月份的东海的HABs。</p>
-	 	 <p>从HABs的主导原因种的总体季节分布的来看，东海原甲藻和米氏凯伦藻是东海HABs高发期的主导原因种，其主导的HABs的爆发次数的多少将决定当年东海HABs的严重程度。</p>  
+	 	 <p>从HABs的主导原因种的总体季节分布的来看，东海原甲藻和米氏凯伦藻是东海HABs高发期的主导原因种，其主导的HABs的爆发次数的多少将决定当年东海HABs的严重程度。于此同时，硅藻则主导着该海域HABs爆发“低谷期”的HABs。</p>  
        </article>
           <article id="g3" class="g3">
        <h2>东海有害藻华的有毒有害原因种分布</h2>
