--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </aside>    
        <article id="n1" class="n1">
        <h2>东海有害藻华的时空分布</h2>
-       <img src="images/donghai_new.jpg" alt="HABs in China" width="450" height="395">
+       <img src="images/donghai_new.jpg" alt="HABs in China" width="500" height="395">
             <p>1933年至今，中国4大海域的HABs频繁发生，其中东海是中国HABs爆发最严重的海域。1933-2018年期间，东海海域共发生了929次HAB,累计面积超过18 km<sup>2</sup>，HABs产生的累计直接经济损失则高达27亿元。</p>
         <p>长江入海口到浙江一带海域是东海HAB灾害最为严重海域，其中94%的单次计面积大于1000 km<sup>2</sup>的HABs发生于此，并且其主导原因种为东海原甲藻和米氏凯伦藻为主。集中爆发的大型HABs给长江口的海洋生态环境安全造成了很大的隐患,爆发于浙江舟山海域的HABs易使当地近海水产生直接经济损失。与之相比，福建沿海的HABs则以中小型（面积不大于1000 km<sup>2</sup>）为主。但，该区域以米氏凯伦藻为主导原因种的HABs则使福建近海水产养殖业产生了高达24亿元的直接经济损失。</p>
         <p>从季节变化分布来看，71%的东海HABs爆发于5-7月,其他月份的HABs零星分布。自2000年以来，在寒冷的月份（10月至3月）发现了更多的小范围赤潮事件。</p>
@@ -123,7 +123,7 @@
        <article id="n3" class="n3">
        <h2>东海有害藻华的经济损失</h2>
        <img src="images/HAB_产生经济损失.jpg" alt="HABs in China" width="500" height="330">
-        <p>近年来，以米氏凯伦藻和东海原甲藻为主导原因种的HABs使东海近岸的海水养殖业蒙受了巨大的经济损失。</p>
+        <p>近年来，以米氏凯伦藻和东海原甲藻为主导原因种的HABs使东海近岸尤其是福建沿海海域的海水养殖业蒙受了巨大的经济损失。</p>
           <p>从季节分布来看，93%的产生了显著经济损失的HABs集中发生于5-6月，其他月份的HABs很少使东海近海水产养殖业产生显著的直接经济损失。</p>
          <p>从年际变化分布来看，1997年起，东海HABs的直接经济损失开始快速增加，2012年达到峰值 （20亿元），此后年份的HABs没有产生明显的直接经济损失。于此同时，福建海域的HABs产生经济损失的热点海域，63%的HABs产生了东海HABs的88%的经济损失。</p>
           <p>[1] Zhou Y *, Weijin Yan, Wenyu Wei. (accepted) Effect of sea surface temperature and precipitation on annual frequency of harmful algal blooms in the East China Sea. Environmental Pollution.</p>
