--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
        <h2>东海有害藻华的分布特征</h2>
        <img src="images/不同等级HAB的分布.png" alt="HABs in China" width="700" height="380">
         <p>基于东海HABs的单次累计覆盖面积的大小，HABs可被分为3个等级：小型HABs(0-50km<sup>2</sup>), 中型HABs(50-1000km<sup>2</sup>)和大型HABs>1000km<sup>2</sup>)。相比较与大中型HABs，小型HABs是东海HABs的总体上的频数变化分布最为一致，而大型HABs的年累计面积则与东海总体的HABs面积年度变化的相关性更高。</p>
-         <p>小型HABs的频数占东海总体的HABs的50%以上，并且造成经济损失93%的HABs为中小型HABs。小型HABs是东海HABs的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。对于中型HABs，在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。大型HABs对东海年度频数的贡献度很小，但其的爆发与否对HABs的年度累计面积变化至关重要。</p>
-        </article>
+        <ul>
+	       <li>小型HABs的频数占东海50%以上的HABs，并且造成93%的直接经济损失。小型HABs是东海HABs的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。与之相比，小型HABs的累计面积则对东海HABs的总体累计面积的变化分布影响较小。</li>
+		<li>对于中型HABs，在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。从累计面积的时间分布上来看，中型HABs的累计面积要显著高于小型HABs,这意味着其的累计面积的多少会对东海HABs的累计覆盖范围有重要的影响</li>
+		<li>大型HABs的年度频数的变化对东海年度频数的贡献度很小，但其的爆发与否对HABs的年度累计面积变化至关重要。大型HABs超过1000km<sup>2</sup>的累计覆盖面积对HABs爆发海域的海洋生态系统安全产生显著的负面影响，并且对当年的东海HABs的严重程度的变化有着重要影响。</li>
+      </ul>
+		</article>
        
        <article id="n3" class="n3">
        <h2>东海有害藻华的经济损失</h2>
