--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p>基于东海HABs的单次累计覆盖面积的大小，HABs可被分为3个等级：小型HABs(0-50km<sup>2</sup>), 中型HABs(50-1000km<sup>2</sup>)和大型HABs>1000km<sup>2</sup>)。相比较与大中型HABs，小型HABs是东海HABs的总体上的频数变化分布最为一致，而大型HABs的年累计面积则与东海总体的HABs面积年度变化的相关性更高。</p>
         <ul>
 	       <li>小型HABs的频数占东海50%以上的HABs，并且造成93%的直接经济损失。小型HABs是东海HABs的主导类型，其在2003年达到峰值(72次)，随后开始波动下降，但其年频数在20次以上。与之相比，小型HABs的累计面积则对东海HABs的总体累计面积的变化分布影响较小。</li>
-		<li>对于中型HABs，在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。从累计面积的时间分布上来看，中型HABs的累计面积要显著高于小型HABs,这意味着其的累计面积的多少会对东海HABs的累计覆盖范围有重要的影响</li>
+		<li>对于中型HABs，在2001-2010年期间的年频数都在20次以上，而在其他时间段内的频数常低于5次。从累计面积的时间分布上来看，中型HABs的累计面积要显著高于小型HABs,这意味着其的累计面积的多少会对东海HABs的累计覆盖范围有重要的影响。</li>
 		<li>大型HABs的年度频数的变化对东海年度频数的贡献度很小，但其的爆发与否对HABs的年度累计面积变化至关重要。大型HABs超过1000km<sup>2</sup>的累计覆盖面积对HABs爆发海域的海洋生态系统安全产生显著的负面影响，并且对当年的东海HABs的严重程度的变化有着重要影响。</li>
       </ul>
 		</article>
@@ -128,7 +128,7 @@
        <h2>东海有害藻华的经济损失</h2>
        <img src="images/HAB_产生经济损失.jpg" alt="HABs in China" width="500" height="330">
         <p>近年来，以米氏凯伦藻和东海原甲藻为主导原因种的HABs使东海近岸尤其是福建沿海海域的海水养殖业蒙受了巨大的经济损失。</p>
-          <p>从季节分布来看，93%的产生了显著经济损失的HABs集中发生于5-6月，其他月份的HABs很少使东海近海水产养殖业产生显著的直接经济损失。</p>
+          <p>从季节分布来看，93%的产生了显著经济损失的HABs集中发生于5-6月，其他月份的HABs很少使东海近海水产养殖业产生显著的直接经济损失。上述结果表明为尽量减少HABs造成的潜在直接经济损失，有关部门和相关产业人员必须严格防控5-6月份的东海有毒有害原因种主导的HABs发生。</p>
          <p>从年际变化分布来看，1997年起，东海HABs的直接经济损失开始快速增加，2012年达到峰值 （20亿元），此后年份的HABs没有产生明显的直接经济损失。于此同时，福建海域的HABs产生经济损失的热点海域，63%的HABs产生了东海HABs的88%的经济损失。</p>
           <p>[1] Zhou Y *, Weijin Yan, Wenyu Wei. (accepted) Effect of sea surface temperature and precipitation on annual frequency of harmful algal blooms in the East China Sea. Environmental Pollution.</p>
        </article>
